--- a/index.html
+++ b/index.html
@@ -1,73 +1,42 @@
-GLOWWORKS PRODUCTIONS, LLC
-PRIVACY POLICY
-Last updated 8/24/18
-Welcome to Glowworks Productions, LLC and Shimmer the Glowworm musical
-books. We value the privacy of our users and we know you care about your
-privacy and the privacy of your children, so we created this Privacy Policy. It
-explains the information we collect from users and how and when we disclose or
-use it. By accessing or using the webste, services, software, applications, and/or
-content made available by Glowworks Productions, LLC, you are consenting to
-collection and use of your information as outlined in this Privacy Policy.
-INFORMATION COLLECTED
-In providing our services, we and our service providers may collect the
-following information from you:
-Information submitted by you when you register, such as email address,
-password.
-Information when you purchase an item such as your payment information,
-mailing address, and telephone number.
-Information that you provide in public forums or otherwise voluntarily
-submit through our product features.
-We and our service providers may also collect information from you as you
-use our services, including:
-Through your browser or device. Certain information is collected by most
-browsers or automatically through your device, such as your (MAC) address,
-computer type, screen resolution, operating system name, version, device
-manufacturer and language, internet browser type, version, and version of
-the services you are using.
-This information helps ensure that the services function properly.
-Using Cookies: Cookies are pieces of information stored on the computer
-that you are using that allow us to collect information sch as browser type, 
-time spent, services, pages visited, language preferences, and other traffic
-data. We and our service providers use the information for security
-purposes, to facilitate navigation, to display information more effectively
-and to recognize your computer to assist your use of the services.
-We also gather statistical information in order to improve the design and
-functionality of the services.
-We may also use cookies to track responses to our other services. If you do
-not want information collected through the use of cookies, there is a simple
-procedure in most browsers that allows you to decline the use of cookies.
-IP Address: Your IP address is a number that is automatically assigned to the
-computer that you are using by your internet service provider. Collecting IP
-addresses is standard practice and is automatically done by many websites,
-applications and other services. We use IP addresses to calculate usage
-levels, diagnose server problems, and administering the service. We may
-also derive your approximate location from your IP address.
-HOW WE USE INFORMATION
-We use this type of information to provide you with the service and any
-features you may request, to send you updates, and to communicate with
-you about purchases. We also use it to provide you with relevant content or
-product features, to investigate and prevent activities that violate our
-policies, to prevent illegal activity, and to improve our products and services
-offered through this service.
-HOW WE SHARE INFORMATION
-Your information may be disclosed to:
-Our service providers who provide services such as website hosting, data
-analysis, payment processing, order fulfillment, information technology,
-customer service and email delivery.
-As is necessary to applicable law, including laws outside your country of
-residence, to comply with legal process, requests from government
-authorities.
-To protect our operations, rights, privacy, safety or property and/or that of
-our affiliates, your or others.
-To limit damages that we may sustain or pursue available remedies.
-We may use and disclose information that does not identify or directly relate
-to an individual, except where required to do so under applicable law.
-We do not collect personal information from children under the age of 13.
-Any child under the age of 13 must seek permission from a parent or
-guardian to use the services. All full names, email addresses, and credit card
-billing information must be from a parent or guardian.
-THIRD PARTY SERVICES
-This Privacy Policy does not address and we are not responsible for any
-practices of any third parties, including third parties operating any site or
-service to which the services link. Should your child leave the service for
-another application or browser this Privacy Policy no longer applies.
+<!DOCTYPE html><html> <head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width"> <title>GLOWWORKS PRODUCTIONS, LLC</title><style>body{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; padding:1em;}</style></head> <body><h2>Privacy Policy</h2> <p>  Glowworks Productions, LLC built the Shimmer the Glowworm Finds Her Glow - the MUSICAL app as a Freemium app. This SERVICE is provided by  Glowworks Productions, LLC at no cost and is intended for use as is.
+                  </p> <p>This page is used to inform visitors regarding my policies with the collection, use, and
+                    disclosure of Personal Information if anyone decided to use my Service.
+                  </p> <p>If you choose to use my Service, then you agree to the collection and use of information in relation
+                    to this policy. The Personal Information that I collect is used for providing and improving the
+                    Service. I will not use or share your information with anyone except as described
+                    in this Privacy Policy.
+                  </p> <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible
+                    at Shimmer the Glowworm Finds Her Glow - the MUSICAL unless otherwise defined in this Privacy Policy.
+                  </p> <p><strong>Information Collection and Use</strong></p> <p>For a better experience, while using our Service, I may require you to provide us with certain
+                    personally identifiable information, including but not limited to camera,storage. The information that I request will be retained on your device and is not collected by me in any way.
+                  </p> <p>The app does use third party services that may collect information used to identify you.</p> <div><p>Link to privacy policy of third party service providers used by the app</p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li> <!----> <!----> <!----> <!----> <!----></ul></div> <p><strong>Log Data</strong></p> <p> I want to inform you that whenever you use my Service, in a case of an
+                    error in the app I collect data and information (through third party products) on your phone
+                    called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address,
+                    device name, operating system version, the configuration of the app when utilizing my Service,
+                    the time and date of your use of the Service, and other statistics.
+                  </p> <p><strong>Cookies</strong></p> <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These
+                    are sent to your browser from the websites that you visit and are stored on your device's internal memory.
+                  </p> <p>This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries
+                    that use “cookies” to collect information and improve their services. You have the option to either
+                    accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to
+                    refuse our cookies, you may not be able to use some portions of this Service.
+                  </p> <p><strong>Service Providers</strong></p> <p> I may employ third-party companies and individuals due to the following reasons:</p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p> I want to inform users of this Service that these third parties have access to your
+                    Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they
+                    are obligated not to disclose or use the information for any other purpose.
+                  </p> <p><strong>Security</strong></p> <p> I value your trust in providing us your Personal Information, thus we are striving
+                    to use commercially acceptable means of protecting it. But remember that no method of transmission over
+                    the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee
+                    its absolute security.
+                  </p> <p><strong>Links to Other Sites</strong></p> <p>This Service may contain links to other sites. If you click on a third-party link, you will be directed
+                    to that site. Note that these external sites are not operated by me. Therefore, I strongly
+                    advise you to review the Privacy Policy of these websites. I have no control over
+                    and assume no responsibility for the content, privacy policies, or practices of any third-party sites
+                    or services.
+                  </p> <p><strong>Children’s Privacy</strong></p> <p>We do not collect personal information from children under the age of 13. Any child under the age of 13 must seek permission from a parent or guardian to use the services. All full names, email addresses, and credit card billing information must be from a parent or guardian.
+                  </p> <p><strong>Changes to This Privacy Policy</strong></p> <p> I may update our Privacy Policy from time to time. Thus, you are advised to review
+                    this page periodically for any changes. I will notify you of any changes by posting
+                    the new Privacy Policy on this page. These changes are effective immediately after they are posted on
+                    this page.
+                  </p> <p><strong>Contact Us</strong></p> <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact
+                    me.
+                  </body></html>
